# Hackathon-Practice-2026-Observers-2

./: DataAnalysis.ipynb  README.md  Snakefile  config.yaml  pyproject.toml
src/tailgate/: analysis.py  cascade.py  config.py  data.py  evaluate.py  features.py  figures.py  logs.py  metric.py  model.py  shift.py  splits.py  stages.py
submissions/: submission.csv
