[project]
name = "tailgate"
version = "1.0.0"
description = "Weighted-MAE income prediction: a gated tail cascade, CPU only"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "xgboost>=2.1",
    "scikit-learn>=1.4",
    "snakemake>=8.0",
    "matplotlib>=3.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tailgate"]
